<?xml version="1.0" encoding="utf-8"?>


<!--Start of LL 1-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_background"
    android:weightSum="1"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/roundSummaryHeader1"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/DRIVING_RATING"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/round_summary_textview_driving_rating"
            android:paddingLeft="30dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>



        <TextView
            android:id="@+id/roundSummaryHeader2"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/LONG_GAME_RATING"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/round_summary_textview_long_game_rating"
            android:paddingLeft="30dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>



        <TextView
        android:id="@+id/roundSummaryHeader3"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="@string/PUTTING_RATING"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/round_summary_textview_putting_rating"
            android:paddingLeft="30dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/roundSummaryHeader4"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/SHORT_GAME_RATING"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/round_summary_textview_short_game_rating"
            android:paddingLeft="30dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/roundSummaryHeader5"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/AWFUL_SHOTS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/round_summary_textview_awful_shots"
            android:paddingLeft="30dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/roundSummaryHeader6"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/Total_Strokes_Gained"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/round_summary_textview_total_sg"
            android:paddingLeft="30dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>


    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <Button
            android:id="@+id/backToListOfRounds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/RETURN_TO_LIST_OF_ROUNDS"
            android:onClick="returnToListOfRounds" />

        <Button
            android:id="@+id/roundSummaryExport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/EXPORT_ROUND"
            android:onClick="checkConnectionAndExport" />

        <Button
            android:id="@+id/roundDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/DELETE_ROUND"
            android:onClick="deleteRound" />

    </LinearLayout>

</LinearLayout>
