<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.sitting_room.GolfShotRating.test">



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:background="@drawable/sky_background">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <EditText
        android:id="@+id/registerUsername"
        android:layout_below = "@id/barLayout"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_height="60dp"
        android:hint="@string/Enter_Username" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_below = "@id/registerUsername"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/Enter_Email"/>


    <EditText
        android:id="@+id/registerPassword"
        android:layout_below = "@id/registerEmail"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_height="60dp"
        android:hint="@string/Enter_Password"
        android:inputType="textPassword"/>


    <EditText
        android:id="@+id/confirmPassword"
        android:layout_below = "@id/registerPassword"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_height="60dp"
        android:hint="@string/Confirm_Password"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/registerResult"
        android:layout_below = "@id/confirmPassword"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <Button
        android:id="@+id/registerButton"
        android:layout_below = "@id/registerResult"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:onClick="register"/>





</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>