<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_background"
    android:layout_weight="10">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity = "center"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

             <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Leagues"
                 android:textSize="25sp"
                 android:gravity = "center_vertical"
                 android:layout_marginLeft="40dp"
                 android:layout_marginStart="40dp"
                android:id="@+id/toolbar_title" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>





    <!--listview-->
    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/barLayout"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_league_button"/>



    <Button
        android:id="@+id/create_league_button"
        android:layout_above="@+id/join_league_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="NewLeague"
        android:text="@string/CREATE_NEW_LEAGUE"/>



    <Button
        android:id="@+id/join_league_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:onClick="joinLeague"
        android:text="@string/JOIN_LEAGUE"/>


</RelativeLayout>





